# ChangeLog for phpwsbb
# $Id: ChangeLog,v 1.1 2008/08/23 04:19:22 adarkling Exp $

========================
Changes in version 2.0.2
========================
+ Fixed "Fatal error: Class `PHPWSBB_Forms` not found" bug
+ Adjusted formatting of forum.tpl

========================
Changes in version 2.0.1
========================
+ Fixed a bug that was preventing the first Forum from being created.  Thanks, jmullan99!
+ Message Boards & Latest Forum Posts blocks now only appear on the home page.
+ Message Boards & Latest Forum Posts blocks now have their own template files.

========================
Changes in version 2.0.0
========================
+ Rewritten Version for phpWebsite 1.x

*phpwsbb-1.0.4 (sometime soon)
    Bug Fixes:
    * Changes to 'save' messages and buttons to be in context
    * Allow 'Re:' to be translated
    * Stop double notices appearing
    * title on posting a message
    * Improved Avatars (uses core ImgLibrary)

    New Features:
    * Preview message before posting
    * View New Posts since last visit
    * Routing to login if using a feature that requires it
    * View Counts - how many times a thread has been read
    * Category View
    * Private Forums (restrict viewing to a group)
    * Halt install if images directory not writeable

*phpwsbb-1.0.3 (23 Mar 2005)
    Bug Fixes:
    * Fixed well formed issue in Forum.php
    * Home page block doesn't appear now if there isn't content
    * #1166899 Change forum category changes last post date
    * Added language filters on quote and reply
    * User monitors now work
    * #1105249 Title in Monitor email wrong
    * #1100091 Error in changing Avatar

*phpwsbb-1.0.2 (04 Mar 2005)
    Bug Fixes:
	* Don't allow forking on threads with a single post.
	* Changed & to &amp; in 'Back to the topic' link
	* Added 'Back to the forum' link after posting
    * Change install to use session var for source directory instead of constant
    * Added height and width attributes to all images.
    